[gd_scene load_steps=2 format=3 uid="uid://2tyy3h5sctyl"]

[ext_resource type="Script" path="res://scripts/enemy_spawner.gd" id="1_sd0iv"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_sd0iv")

[node name="SpawnPositions" type="Node2D" parent="."]

[node name="SpawnPosition_01" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1390, 50)

[node name="SpawnPosition_02" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1390, 175)

[node name="SpawnPosition_03" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1390, 300)

[node name="SpawnPosition_04" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1390, 425)

[node name="SpawnPosition_05" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1390, 550)

[node name="SpawnPosition_06" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1390, 675)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
